--- a/02_CSS/03_cssSelectors.css
+++ b/02_CSS/03_cssSelectors.css
@@ -13,5 +13,50 @@ h1,h2 {
 
 #signup {
   background-color: #1d3557;
-  color: #a8dadc
+  color: #f1faee;
+}
+
+span {
+  color: #457b9d;
+}
+
+.tag {
+  background-color: #e63946;
+  color: #f1faee;
+  font-size: 16px;
+}
+
+.post a {
+  color: #457b9d;
+  font-weight: 700;
+  text-decoration: none;
+}
+
+.post a:hover {
+  text-decoration: underline;
+}
+
+footer a {
+  color: #e63946;
+}
+
+h2 + button {
+  font-size: 20px;
+}
+
+footer > a {
+  color: #457b9d;
+}
+
+button:hover {
+  background-color: #e63946;
+  color: #f1faee;
+}
+
+.post:nth-of-type(2n) {
+  background-color: #dfe8dc;
+}
+
+.post h2::first-letter {
+  font-size: 50px;
 }
