--- a/09_Express/04_REST/views/comments/show.ejs
+++ b/09_Express/04_REST/views/comments/show.ejs
@@ -9,5 +9,9 @@
   <h1>Comment id: #<%= comment.id %></h1>
   <h2><%= comment.comment %> - <%= comment.username %> </h2>
   <a href="/comments">Back to Index</a>
+  <a href="/comments/<%= comment.id %>/edit">Edit comment</a>
+  <form action="/comments/<%= comment.id %>?_method=DELETE" method="post">
+    <button>Delete comment</button>
+  </form>
 </body>
 </html>
