--- a/11_YelpCamp/views/campgrounds/new.ejs
+++ b/11_YelpCamp/views/campgrounds/new.ejs
@@ -1,23 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>New Campground</title>
-</head>
-<body>
-  <h1>New Campground</h1>
-  <form action="/campgrounds" method="POST">
-    <div>
-      <label for="title">Title</label>
-      <input type="text" name="campground[title]" id="title">
+<% layout('layouts/boilerplate') %>
+
+<div class="row">
+  <h1 class="text-center">New Campground</h1>
+  <div class="col-6 offset-3">
+    <form action="/campgrounds" method="POST">
+      <div class="mb-3">
+        <label class="form-label" for="title">Title</label>
+        <input class="form-control" type="text" name="campground[title]" id="title">
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="location">Location</label>
+        <input class="form-control" type="text" name="campground[location]" id="location">
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="image">Image URL</label>
+        <input class="form-control" type="text" name="campground[image]" id="image">
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="price">Campground Price</label>
+        <div class="input-group">
+          <span class="input-group-text" id="price-label">$</span>
+          <input class="form-control" type="number" id="price" placeholder="0.00" aria-label="Price" aria-describedby="price-label" name="campground[price]">
+        </div>
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="description">Description</label>
+        <textarea class="form-control" type="text" name="campground[description]" id="description"></textarea>
+      </div>
+      <div class="mb-3">
+        <button class="btn btn-success">Add Campground</button>
+      </div>
+    </form>
+    <div class="mb-3">
+      <a class="btn btn-primary" href="/campgrounds">All Campgrounds</a>
     </div>
-    <div>
-      <label for="location">Location</label>
-      <input type="text" name="campground[location]" id="location">
-    </div>
-    <button>Add Campground</button>
-  </form>
-  <a href="/campgrounds">All Campgrounds</a>
-</body>
-</html>
+  </div>
+</div>
