--- a/12_Bcrypt/02_Auth/views/login.ejs
+++ b/12_Bcrypt/02_Auth/views/login.ejs
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Register</title>
+  <title>Login</title>
 </head>
 <body>
-  <h1>Sign Up</h1>
-  <form action="/register" method="POST">
+  <h1>Login</h1>
+  <form action="/login" method="POST">
     <div>
       <label for="username">Username</label>
       <input type="text" name="username" id="username", placeholder="username">
@@ -16,7 +16,7 @@
       <label for="password">Password</label>
       <input type="password" name="password" id="password", placeholder="password">
     </div>
-    <button>Sign Up</button>
+    <button>Login</button>
   </form>
 </body>
 </html>
