--- a/11_YelpCamp/views/campgrounds/edit.ejs
+++ b/11_YelpCamp/views/campgrounds/edit.ejs
@@ -1,8 +1,7 @@
 <% layout('layouts/boilerplate') %>
-
 <div class="row">
-  <h1 class="text-center">Edit Campground</h1>
-  <div class="col-6 offset-3">
+  <h1 class="col-12 text-center">Edit Campground</h1>
+  <div class="col-md-6 offset-md-3">
     <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST" novalidate class="validated-form" enctype="multipart/form-data">
       <div class="mb-3">
         <label class="form-label" for="title">Title</label>
@@ -15,13 +14,11 @@
         <div class="valid-feedback">Looks good!</div>
       </div>
       <div class="mb-3">
-        <label for="image" class="form-label">Upload more image(s)</label>
-        <input class="form-control" type="file" id="image" name="image" multiple>
-      </div>
-      <div class="mb-3">
         <label class="form-label" for="price">Campground Price</label>
         <div class="input-group">
-          <span class="input-group-text" id="price-label">$</span>
+          <div class="input-group-prepend">
+            <span class="input-group-text" id="price-label">$</span>
+          </div>
           <input class="form-control" type="number" id="price" placeholder="0.00" aria-label="Price" aria-describedby="price-label" name="campground[price]" value="<%= campground.price %>" required>
           <div class="valid-feedback">Looks good!</div>
         </div>
@@ -30,6 +27,12 @@
         <label class="form-label" for="description">Description</label>
         <textarea class="form-control" type="text" name="campground[description]" id="description" required><%= campground.description %></textarea>
         <div class="valid-feedback">Looks good!</div>
+      </div>
+      <div class="mb-3">
+        <div class="custom-file">
+          <input type="file" class="custom-file-input" id="image">
+          <label class="custom-file-label" for="image">Choose image(s)...</label>
+        </div>
       </div>
       <div class="mb-3">
         <% campground.images.forEach((img, i) => { %>
