--- a/11_YelpCamp/views/campgrounds/edit.ejs
+++ b/11_YelpCamp/views/campgrounds/edit.ejs
@@ -29,9 +29,12 @@
         <div class="valid-feedback">Looks good!</div>
       </div>
       <div class="mb-3">
-        <div class="custom-file">
-          <input type="file" class="custom-file-input" id="image">
-          <label class="custom-file-label" for="image">Choose image(s)...</label>
+        <div class="form-file custom-file">
+          <input type="file" class="form-file-input" id="image" name="image" multiple>
+          <label class="form-file-label" for="image">
+              <span class="form-file-text custom-file-label">Add more image(s)...</span>
+              <span class="form-file-button">Browse</span>
+          </label>
         </div>
       </div>
       <div class="mb-3">
